--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,13 @@
     overflow: hidden;
   }
 }
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
